Fibonacci solution, analysis and more problems.
Signed-off-by: Ulises Tirado Zatarain <ulises.tirado@cimat.mx>

--- a/talks/dynamic_programming/[DP] - Dynamic Programming.lyx
+++ b/talks/dynamic_programming/[DP] - Dynamic Programming.lyx
@@ -95,7 +95,8 @@
 \SetKwFunction{improve}{visit-or-improve}
 \SetKwFunction{mycomparator}{cmp}
 
-\SetKwFunction{trie}{trie}
+\SetKwFunction{memset}{std::memset}
+\SetKwFunction{sizeof}{sizeof}
 \SetKwFunction{map}{std::map}
 \SetKwFunction{addword}{add-word}
 \SetKwFunction{findword}{find-word}
@@ -295,21 +296,6 @@ Nov, 2020
 \end_layout
 
 \begin_layout Standard
-\begin_inset Note Note
-status collapsed
-
-\begin_layout Plain Layout
-If you have a file called "institution-logo-filename.xxx", where xxx is a
- graphic format that can be processed by latex or pdflatex, resp., then you
- can add a logo by uncommenting the following:
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -329,29 +315,9 @@ logo{
 pgfuseimage{algorists}}
 \end_layout
 
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Note Note
-status collapsed
-
 \begin_layout Plain Layout
-The following causes the table of contents to be shown at the beginning
- of every subsection.
- Delete this, if you do not want it.
-\end_layout
-
-\end_inset
-
 
 \end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
 
 \begin_layout Plain Layout
 
@@ -391,28 +357,9 @@ tableofcontents[currentsection,currentsubsection]
 }
 \end_layout
 
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Note Note
-status collapsed
-
 \begin_layout Plain Layout
-If you wish to uncover everything in a step-wise fashion, uncomment the
- following command:
-\end_layout
-
-\end_inset
-
 
 \end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
 
 \begin_layout Plain Layout
 
@@ -623,13 +570,97 @@ A particular problem
 status open
 
 \begin_layout Plain Layout
-Recurrence relationship and tree of calls
+Recurrence relationship
 \end_layout
 
 \end_inset
 
 
 \begin_inset Separator latexpar
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Standard
+Fibonacci sequence (
+\begin_inset Formula $0,1,1,2,3,5,\ldots$
+\end_inset
+
+) is the simplest examples
+\begin_inset Separator latexpar
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Formula $F(n)=\begin{cases}
+n & n\in\{0,1\}\\
+F(n-1)+F(n-2) & n>1
+\end{cases}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Example
+\begin_inset Argument 2
+status open
+
+\begin_layout Plain Layout
+Fibonacci numbers
+\end_layout
+
+\end_inset
+
+Given 
+\begin_inset Formula $Q$
+\end_inset
+
+ queries compute the 
+\begin_inset Formula $n$
+\end_inset
+
+-th Fibonacci number for each of them.
+ Each query is a single line with a single integer 
+\begin_inset Formula $n$
+\end_inset
+
+.
+ Your task is write a function which receives the integer 
+\begin_inset Formula $n$
+\end_inset
+
+ as input and should return the 
+\begin_inset Formula $n$
+\end_inset
+
+-th Fibonacci number.
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Naive solutions and limitations
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+Fibonacci classic iterative implementation
+\end_layout
+
 \end_inset
 
 
@@ -644,22 +675,257 @@ status open
 
 
 \backslash
-visible<1->{
+begin{algorithm}[H]
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Const 
+\backslash
+Integer $MAX = 90$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Function{
+\backslash
+Long 
+\backslash
+Integer 
+\backslash
+fibonacci{
+\backslash
+Integer $n$}}{
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+lIf{$n < 0$ 
+\backslash
+KwOr $n > MAX$}{
+\backslash
+Throw 
+\begin_inset Quotes fld
+\end_inset
+
+Out of range.
+\begin_inset Quotes frd
+\end_inset
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+Long $previous=0$, $current=1$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+For{$k=1$ 
+\backslash
+KwTo $n$}{
+\end_layout
+
+\begin_layout Plain Layout
+
+		
+\backslash
+Long $aux=previous+current$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+		$previous=current$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+		$current=aux$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+Return{$previous$}
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{algorithm}
 \end_layout
 
 \end_inset
 
-Fibonacci sequence (
-\begin_inset Formula $0,1,1,2,3,5,\ldots$
+
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
 \end_inset
 
-) is the simplest examples
+
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+Fibonacci classic recursive implementation
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Standard
 \begin_inset ERT
 status open
 
 \begin_layout Plain Layout
 
+
+\backslash
+begin{algorithm}[H]
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Const 
+\backslash
+Integer $MAX = 90$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Function{
+\backslash
+Long 
+\backslash
+Integer 
+\backslash
+fibonacci{
+\backslash
+Integer $n$}}{
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+lIf{$n < 0$ 
+\backslash
+KwOr $n > MAX$}{
+\backslash
+Throw 
+\begin_inset Quotes fld
+\end_inset
+
+Out of range.
+\begin_inset Quotes frd
+\end_inset
+
 }
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+lIf{$n < 2$}{
+\backslash
+Return{$n$}}
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+Return{
+\backslash
+fibonacci{$n-1$} $+$ 
+\backslash
+fibonacci{$n-2$}}
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{algorithm}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+Problems with the classic implementations
 \end_layout
 
 \end_inset
@@ -671,8 +937,35 @@ status open
 
 \end_layout
 
-\begin_layout Standard
-\align center
+\begin_deeper
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+visible<1->{
+\end_layout
+
+\end_inset
+
+In the iterative implementation we compute all the values for every query.
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
 \begin_inset ERT
 status open
 
@@ -685,48 +978,21 @@ visible<2->{
 
 \end_inset
 
-
-\begin_inset Formula $F(n)=\begin{cases}
-1 & n=1\\
-F(n-1)+F(n-2) & n>1\\
-0 & \textrm{otherwise}
-\end{cases}$
+In the recursive one, some values are computed twice (or more times), in
+ particular for 
+\begin_inset Formula $F(4)$
 \end_inset
 
-
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
+:
 \end_layout
 
 \begin_layout Standard
 \align center
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-visible<3->{
-\end_layout
-
-\end_inset
-
-
 \begin_inset Graphics
-	filename figures/fibonacci-tree.png
+	filename figures/fibonacci-tree-redundance.png
 	lyxscale 50
 	scale 50
-	BoundingBox 100bp 180bp 930bp 710bp
+	BoundingBox 100bp 170bp 1000bp 710bp
 	clip
 
 \end_inset
@@ -743,6 +1009,1092 @@ status open
 \end_inset
 
 
+\end_layout
+
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+visible<3->{
+\end_layout
+
+\end_inset
+
+This is called 
+\series bold
+overlapping
+\series default
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+Complexity?
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+visible<1->{
+\end_layout
+
+\end_inset
+
+What is run time complexity for the iterative function? 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+} 
+\backslash
+visible<2->{
+\end_layout
+
+\end_inset
+
+
+\begin_inset Formula $O(N)$
+\end_inset
+
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+visible<3->{
+\end_layout
+
+\end_inset
+
+What is run time complexity for the recursive one? 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+} 
+\backslash
+visible<4->{
+\end_layout
+
+\end_inset
+
+
+\begin_inset Formula $O(2^{N})$
+\end_inset
+
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+visible<5->{
+\end_layout
+
+\end_inset
+
+What is the run time complexity for the whole program?
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+visible<6->{
+\end_layout
+
+\end_inset
+
+Iterative: 
+\begin_inset Formula $O(QN)$
+\end_inset
+
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+visible<7->{
+\end_layout
+
+\end_inset
+
+Recursive: 
+\begin_inset Formula $O(2^{N}Q)$
+\end_inset
+
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+visible<8->{
+\end_layout
+
+\end_inset
+
+What about the memory?
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+} 
+\backslash
+visible<9->{
+\end_layout
+
+\end_inset
+
+
+\begin_inset Formula $O(1)$
+\end_inset
+
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section
+Algorithm design
+\end_layout
+
+\begin_layout Subsection
+Design
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+Design and implementations
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Frame
+There are two ways to implement dynamic programming:
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+Bottom-up (iterative implementation)
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+Solve 
+\series bold
+all the the possible smaller problems
+\series default
+ before the bigger one
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+Top-down (recursive implementation)
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+Solve 
+\series bold
+only the instances which are actually needed
+\series default
+ for a given problem
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+Both solve the problem in efficient way, the discussion may end up in 
+\begin_inset Flex Emphasize
+status open
+
+\begin_layout Plain Layout
+religious
+\end_layout
+
+\end_inset
+
+ arguments.
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+Fibonacci bottom-up implementation
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Algorithm
+Solve all the the possible smaller problems before the bigger one:
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{algorithm}[H]
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Const 
+\backslash
+Integer $MAX = 90$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Const 
+\backslash
+Long 
+\backslash
+Integer $UNDEFINED = -1$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Long 
+\backslash
+Integer $memo[MAX + 1]$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+memset{$memo$, $UNDEFINED$, 
+\backslash
+sizeof{$memo$}}
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+$memo[0]=0$; $memo[1]=1$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Function{
+\backslash
+Long 
+\backslash
+Integer 
+\backslash
+fibonacci{
+\backslash
+Integer $n$}}{
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+lIf{$n < 0$ 
+\backslash
+KwOr $n > MAX$}{
+\backslash
+Throw 
+\begin_inset Quotes fld
+\end_inset
+
+Out of range.
+\begin_inset Quotes frd
+\end_inset
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+If{$memo[n]==UNDEFINED$}{
+\end_layout
+
+\begin_layout Plain Layout
+
+		
+\backslash
+For{$k=2$ 
+\backslash
+KwTo $n$}{
+\end_layout
+
+\begin_layout Plain Layout
+
+			$memo[k]=memo[k-1]+memo[k-2]$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+Return{$memo[n]$}
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{algorithm}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+Fibonacci top-down implementation
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Standard
+Solve only the instances which are actually needed for a given problem:
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{algorithm}[H]
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Const 
+\backslash
+Integer $MAX = 90$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Const 
+\backslash
+Long 
+\backslash
+Integer $UNDEFINED = -1$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Long 
+\backslash
+Integer $memo[MAX + 1]$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+memset{$memo$, $UNDEFINED$, 
+\backslash
+sizeof{$memo$}}
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+$memo[0]=0$; $memo[1]=1$
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+Function{
+\backslash
+Long 
+\backslash
+Integer 
+\backslash
+fibonacci{
+\backslash
+Integer $n$}}{
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+lIf{$n < 0$ 
+\backslash
+KwOr $n > MAX$}{
+\backslash
+Throw 
+\begin_inset Quotes fld
+\end_inset
+
+Out of range.
+\begin_inset Quotes frd
+\end_inset
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+lIf{$memo[n] 
+\backslash
+neq UNDEFINED$}{
+\backslash
+Return{$memo[n]$}}
+\end_layout
+
+\begin_layout Plain Layout
+
+	$memo[n]=$ 
+\backslash
+fibonacci{$n-1$} $+$ 
+\backslash
+fibonacci{$n-2$}
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+	
+\backslash
+Return{$memo[n]$}
+\backslash
+;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{algorithm}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Analysis
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+Complexity analysis
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+Time
+\end_layout
+
+\begin_layout Itemize
+Memory
+\end_layout
+
+\end_deeper
+\begin_layout Section
+More problems
+\end_layout
+
+\begin_layout Subsection
+Unidimensional problems
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+Coin change (brainstorming)
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Block
+\begin_inset Argument 2
+status open
+
+\begin_layout Plain Layout
+Coin change (
+\begin_inset CommandInset href
+LatexCommand href
+name "source: LeetCode"
+target "https://leetcode.com/problems/coin-change/"
+literal "false"
+
+\end_inset
+
+)
+\end_layout
+
+\end_inset
+
+You are given coins of different denominations and a total amount of money
+ amount.
+ Write a function to compute the fewest number of coins that you need to
+ make up that amount.
+ If that amount of money cannot be made up by any combination of the coins,
+ return -1.
+ You may assume that you have an infinite number of each kind of coin.
+\end_layout
+
+\begin_layout Block
+
+\end_layout
+
+\begin_layout ExampleBlock
+\begin_inset Argument 2
+status open
+
+\begin_layout Plain Layout
+Example
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout ExampleBlock
+
+\series bold
+Input
+\series default
+: coins = [1,2,5], amount = 11
+\end_layout
+
+\begin_layout ExampleBlock
+
+\series bold
+Output
+\series default
+: 3
+\end_layout
+
+\begin_layout ExampleBlock
+
+\series bold
+Explanation
+\series default
+: 11 = 5 + 5 + 1
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+David's staircase (brainstorming)
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Block
+\begin_inset Argument 2
+status open
+
+\begin_layout Plain Layout
+David's staircase (
+\begin_inset CommandInset href
+LatexCommand href
+name "source: HackerRank"
+target "https://www.hackerrank.com/challenges/ctci-recursive-staircase/problem"
+literal "false"
+
+\end_inset
+
+)
+\end_layout
+
+\end_inset
+
+Davis has a number of staircases in his house and he likes to climb each
+ staircase 
+\begin_inset Formula $1,2$
+\end_inset
+
+ or 
+\begin_inset Formula $3$
+\end_inset
+
+ steps at a time.
+ Being a very precocious child, he wonders how many ways there are to reach
+ the top of the staircase.
+\end_layout
+
+\begin_layout Block
+Given the respective heights for each of the 
+\begin_inset Formula $s$
+\end_inset
+
+ staircases in his house, find and print the number of ways he can climb
+ each staircase, module 
+\begin_inset Formula $10^{10}+7$
+\end_inset
+
+ on a new line.
+\end_layout
+
+\begin_layout Block
+For example, there is 
+\begin_inset Formula $s=1$
+\end_inset
+
+ staircase in the house that is 
+\begin_inset Formula $n=5$
+\end_inset
+
+ steps high.
+ Davis can step on the following sequences of steps:
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Multidimensional problems
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+Multidimensional (homework challenge)
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Block
+\begin_inset Argument 2
+status open
+
+\begin_layout Plain Layout
+Knight on the chess board (
+\begin_inset CommandInset href
+LatexCommand href
+name "source: LeetCode"
+target "https://leetcode.com/problems/knight-probability-in-chessboard/"
+literal "false"
+
+\end_inset
+
+)
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Block
+On an 
+\begin_inset Formula $N\times N$
+\end_inset
+
+ chessboard, a knight starts at the 
+\begin_inset Formula $r$
+\end_inset
+
+-th row and 
+\begin_inset Formula $c$
+\end_inset
+
+-th column and attempts to make exactly 
+\begin_inset Formula $K$
+\end_inset
+
+ moves.
+ The rows and columns are 
+\begin_inset Formula $0$
+\end_inset
+
+ indexed, so the top-left square is 
+\begin_inset Formula $(0,0)$
+\end_inset
+
+, and the bottom-right square is 
+\begin_inset Formula $(N-1,N-1)$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Block
+A chess knight has 
+\begin_inset Formula $8$
+\end_inset
+
+ possible moves it can make, as illustrated below.
+ Each move is two squares in a cardinal direction, then one square in an
+ orthogonal direction.
+\end_layout
+
+\begin_layout ExampleBlock
+\begin_inset Argument 2
+status open
+
+\begin_layout Plain Layout
+Example
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout ExampleBlock
+
+\series bold
+Input
+\series default
+: 3, 2, 0, 0 
+\end_layout
+
+\begin_layout ExampleBlock
+
+\series bold
+Output
+\series default
+: 0.0625
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+More classic problems
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+More classic problems
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Frame
+We can find many applications of dynamic programming in several knowledge
+ areas (even if they are not necessary related with technology a priori):
+ militia, robotics, image processing, etc.
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+Longest Common Subsequence
+\end_layout
+
+\begin_layout Itemize
+Edit distance
+\end_layout
+
+\begin_layout Itemize
+Knapsack
+\end_layout
+
+\begin_layout Itemize
+Floyd-Warshall
+\end_layout
+
+\begin_layout Itemize
+Single-source Shortest Path
 \end_layout
 
 \end_deeper
