Examples for the problems.
Signed-off-by: Ulises Tirado Zatarain <ulises.tirado@cimat.mx>

--- a/talks/dynamic_programming/[DP] - Dynamic Programming.tex
+++ b/talks/dynamic_programming/[DP] - Dynamic Programming.tex
@@ -195,18 +195,17 @@ decisions.
 Fibonacci sequence ($0,1,1,2,3,5,\ldots$) is the simplest examples
 
 \begin{center}
-$F(n)=\begin{cases}
-n & n\in\{0,1\}\\
-F(n-1)+F(n-2) & n>1
+$F_{N}=\begin{cases}
+N & N\in\{0,1\}\\
+F_{N-1}+F_{N-2} & N>1
 \end{cases}$
 \par\end{center}
-\begin{example}[Fibonacci numbers]
-Given $Q$ queries compute the $n$-th Fibonacci number for each
-of them. Each query is a single line with a single integer $n$. Your
-task is write a function which receives the integer $n$ as input
-and should return the $n$-th Fibonacci number.
-\end{example}
-
+\begin{block}{Fibonacci numbers}
+Given $Q$ queries compute the $N$-th Fibonacci number for each
+of them. Each query is a single line with a single integer $N$. Your
+task is write a function which receives the integer $N$ as input
+and should return the $N$-th Fibonacci number.
+\end{block}
 \end{frame}
 
 
@@ -215,10 +214,10 @@ and should return the $n$-th Fibonacci number.
 
 \begin{algorithm}[H]
 \Const \Integer $MAX = 90$\;
-\Function{\Long \Integer \fibonacci{\Integer $n$}}{
-	\lIf{$n < 0$ \KwOr $n > MAX$}{\Throw "Out of range."}
+\Function{\Long \Integer \fibonacci{\Integer $N$}}{
+	\lIf{$n < 0$ \KwOr $N > MAX$}{\Throw "Out of range."}
 	\Long $previous=0$, $current=1$\;
-	\For{$k=1$ \KwTo $n$}{
+	\For{$k=1$ \KwTo $N$}{
 		\Long $aux=previous+current$\;
 		$previous=current$\;
 		$current=aux$\;
@@ -232,10 +231,10 @@ and should return the $n$-th Fibonacci number.
 
 \begin{algorithm}[H]
 \Const \Integer $MAX = 90$\;
-\Function{\Long \Integer \fibonacci{\Integer $n$}}{
-	\lIf{$n < 0$ \KwOr $n > MAX$}{\Throw "Out of range."}
-	\lIf{$n < 2$}{\Return{$n$}}
-	\Return{\fibonacci{$n-1$} $+$ \fibonacci{$n-2$}}\;
+\Function{\Long \Integer \fibonacci{\Integer $N$}}{
+	\lIf{$N < 0$ \KwOr $N > MAX$}{\Throw "Out of range."}
+	\lIf{$N < 2$}{\Return{$N$}}
+	\Return{\fibonacci{$N-1$} $+$ \fibonacci{$N-2$}}\;
 }
 \end{algorithm}
 \end{frame}
@@ -266,7 +265,11 @@ for every query.}
 \item \visible<6->{Iterative: $O(QN)$}
 \item \visible<7->{Recursive: $O(2^{N}Q)$}
 \end{itemize}
-\item \visible<8->{What about the memory?} \visible<9->{$O(1)$}
+\item \visible<8->{What about the memory?}
+\begin{itemize}
+\item \visible<9->{Iterative: $O(1)$}
+\item \visible<10->{Recursive: $O(N)$--Why?} \visible<11->{Stack}
+\end{itemize}
 \end{itemize}
 \end{frame}
 
@@ -301,14 +304,14 @@ Solve all the the possible smaller problems before the bigger one:
 \Long \Integer $memo[MAX + 1]$\;
 \memset{$memo$, $UNDEFINED$, \sizeof{$memo$}}\;
 $memo[0]=0$; $memo[1]=1$\;
-\Function{\Long \Integer \fibonacci{\Integer $n$}}{
-	\lIf{$n < 0$ \KwOr $n > MAX$}{\Throw "Out of range."}
-	\If{$memo[n]==UNDEFINED$}{
-		\For{$k=2$ \KwTo $n$}{
+\Function{\Long \Integer \fibonacci{\Integer $N$}}{
+	\lIf{$n < 0$ \KwOr $N > MAX$}{\Throw "Out of range."}
+	\If{$memo[N]==UNDEFINED$}{
+		\For{$k=2$ \KwTo $N$}{
 			$memo[k]=memo[k-1]+memo[k-2]$\;
 		}
 	}
-	\Return{$memo[n]$}\;
+	\Return{$memo[N]$}\;
 }
 \end{algorithm}
 \end{frame}
@@ -323,11 +326,11 @@ Solve only the instances which are actually needed for a given problem:
 \Long \Integer $memo[MAX + 1]$\;
 \memset{$memo$, $UNDEFINED$, \sizeof{$memo$}}\;
 $memo[0]=0$; $memo[1]=1$\;
-\Function{\Long \Integer \fibonacci{\Integer $n$}}{
-	\lIf{$n < 0$ \KwOr $n > MAX$}{\Throw "Out of range."}
-	\lIf{$memo[n] \neq UNDEFINED$}{\Return{$memo[n]$}}
-	$memo[n]=$ \fibonacci{$n-1$} $+$ \fibonacci{$n-2$}\;
-	\Return{$memo[n]$}\;
+\Function{\Long \Integer \fibonacci{\Integer $N$}}{
+	\lIf{$N < 0$ \KwOr $N > MAX$}{\Throw "Out of range."}
+	\lIf{$memo[N] \neq UNDEFINED$}{\Return{$memo[N]$}}
+	$memo[n]=$ \fibonacci{$N-1$} $+$ \fibonacci{$N-2$}\;
+	\Return{$memo[N]$}\;
 }
 \end{algorithm}
 \end{frame}
@@ -336,8 +339,8 @@ $memo[0]=0$; $memo[1]=1$\;
 \subsection{Analysis}
 \begin{frame}{Complexity analysis}
 \begin{itemize}
-\item Time
-\item Memory
+\item \visible<1->{What is the run time complexity in both cases?} \visible<2->{$O(\max(Q,N))$}
+\item \visible<3->{And the memory complexity?} \visible<4->{$O(N)$}
 \end{itemize}
 \end{frame}
 
@@ -373,10 +376,18 @@ staircase.
 Given the respective heights for each of the $s$ staircases in his
 house, find and print the number of ways he can climb each staircase,
 module $10^{10}+7$ on a new line.
-
-For example, there is $s=1$ staircase in the house that is $n=5$
-steps high. Davis can step on the following sequences of steps:
 \end{block}
+\begin{exampleblock}{Example}
+For example, there is $s=1$ staircase in the house that is $n=5$
+steps high. David can step on up to $13$ sequences of steps.
+\end{exampleblock}
+\end{frame}
+
+\begin{frame}{David's staircase (brainstorming)}
+\begin{exampleblock}{David's staircase (\href{https://www.hackerrank.com/challenges/ctci-recursive-staircase/problem}{source: HackerRank})}
+For example, there is $s=1$ staircase in the house that is $n=5$
+steps high. David can step on the following sequences of steps:
+\end{exampleblock}
 \end{frame}
 
 
