--- a/talks/dynamic_programming/[DP] - Dynamic Programming.lyx
+++ b/talks/dynamic_programming/[DP] - Dynamic Programming.lyx
@@ -597,16 +597,16 @@ Fibonacci sequence (
 
 \begin_layout Standard
 \align center
-\begin_inset Formula $F(n)=\begin{cases}
-n & n\in\{0,1\}\\
-F(n-1)+F(n-2) & n>1
+\begin_inset Formula $F_{N}=\begin{cases}
+N & N\in\{0,1\}\\
+F_{N-1}+F_{N-2} & N>1
 \end{cases}$
 \end_inset
 
 
 \end_layout
 
-\begin_layout Example
+\begin_layout Block
 \begin_inset Argument 2
 status open
 
@@ -621,21 +621,21 @@ Given
 \end_inset
 
  queries compute the 
-\begin_inset Formula $n$
+\begin_inset Formula $N$
 \end_inset
 
 -th Fibonacci number for each of them.
  Each query is a single line with a single integer 
-\begin_inset Formula $n$
+\begin_inset Formula $N$
 \end_inset
 
 .
  Your task is write a function which receives the integer 
-\begin_inset Formula $n$
+\begin_inset Formula $N$
 \end_inset
 
  as input and should return the 
-\begin_inset Formula $n$
+\begin_inset Formula $N$
 \end_inset
 
 -th Fibonacci number.
@@ -701,7 +701,7 @@ Integer
 \backslash
 fibonacci{
 \backslash
-Integer $n$}}{
+Integer $N$}}{
 \end_layout
 
 \begin_layout Plain Layout
@@ -710,7 +710,7 @@ Integer $n$}}{
 \backslash
 lIf{$n < 0$ 
 \backslash
-KwOr $n > MAX$}{
+KwOr $N > MAX$}{
 \backslash
 Throw 
 \begin_inset Quotes fld
@@ -738,7 +738,7 @@ Long $previous=0$, $current=1$
 \backslash
 For{$k=1$ 
 \backslash
-KwTo $n$}{
+KwTo $N$}{
 \end_layout
 
 \begin_layout Plain Layout
@@ -851,16 +851,16 @@ Integer
 \backslash
 fibonacci{
 \backslash
-Integer $n$}}{
+Integer $N$}}{
 \end_layout
 
 \begin_layout Plain Layout
 
 	
 \backslash
-lIf{$n < 0$ 
+lIf{$N < 0$ 
 \backslash
-KwOr $n > MAX$}{
+KwOr $N > MAX$}{
 \backslash
 Throw 
 \begin_inset Quotes fld
@@ -877,9 +877,9 @@ Out of range.
 
 	
 \backslash
-lIf{$n < 2$}{
+lIf{$N < 2$}{
 \backslash
-Return{$n$}}
+Return{$N$}}
 \end_layout
 
 \begin_layout Plain Layout
@@ -888,9 +888,9 @@ Return{$n$}}
 \backslash
 Return{
 \backslash
-fibonacci{$n-1$} $+$ 
+fibonacci{$N-1$} $+$ 
 \backslash
-fibonacci{$n-2$}}
+fibonacci{$N-2$}}
 \backslash
 ;
 \end_layout
@@ -1262,14 +1262,29 @@ status open
 
 \begin_layout Plain Layout
 
-} 
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
 \backslash
 visible<9->{
 \end_layout
 
 \end_inset
 
-
+Iterative: 
 \begin_inset Formula $O(1)$
 \end_inset
 
@@ -1287,6 +1302,40 @@ status open
 
 \end_layout
 
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+visible<10->{
+\end_layout
+
+\end_inset
+
+Recursive: 
+\begin_inset Formula $O(N)$
+\end_inset
+
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+--Why?} 
+\backslash
+visible<11->{Stack}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_deeper
 \end_deeper
 \begin_layout Standard
 \begin_inset Separator parbreak
@@ -1465,7 +1514,7 @@ Integer
 \backslash
 fibonacci{
 \backslash
-Integer $n$}}{
+Integer $N$}}{
 \end_layout
 
 \begin_layout Plain Layout
@@ -1474,7 +1523,7 @@ Integer $n$}}{
 \backslash
 lIf{$n < 0$ 
 \backslash
-KwOr $n > MAX$}{
+KwOr $N > MAX$}{
 \backslash
 Throw 
 \begin_inset Quotes fld
@@ -1491,7 +1540,7 @@ Out of range.
 
 	
 \backslash
-If{$memo[n]==UNDEFINED$}{
+If{$memo[N]==UNDEFINED$}{
 \end_layout
 
 \begin_layout Plain Layout
@@ -1500,7 +1549,7 @@ If{$memo[n]==UNDEFINED$}{
 \backslash
 For{$k=2$ 
 \backslash
-KwTo $n$}{
+KwTo $N$}{
 \end_layout
 
 \begin_layout Plain Layout
@@ -1524,7 +1573,7 @@ KwTo $n$}{
 
 	
 \backslash
-Return{$memo[n]$}
+Return{$memo[N]$}
 \backslash
 ;
 \end_layout
@@ -1648,16 +1697,16 @@ Integer
 \backslash
 fibonacci{
 \backslash
-Integer $n$}}{
+Integer $N$}}{
 \end_layout
 
 \begin_layout Plain Layout
 
 	
 \backslash
-lIf{$n < 0$ 
+lIf{$N < 0$ 
 \backslash
-KwOr $n > MAX$}{
+KwOr $N > MAX$}{
 \backslash
 Throw 
 \begin_inset Quotes fld
@@ -1674,20 +1723,20 @@ Out of range.
 
 	
 \backslash
-lIf{$memo[n] 
+lIf{$memo[N] 
 \backslash
 neq UNDEFINED$}{
 \backslash
-Return{$memo[n]$}}
+Return{$memo[N]$}}
 \end_layout
 
 \begin_layout Plain Layout
 
 	$memo[n]=$ 
 \backslash
-fibonacci{$n-1$} $+$ 
+fibonacci{$N-1$} $+$ 
 \backslash
-fibonacci{$n-2$}
+fibonacci{$N-2$}
 \backslash
 ;
 \end_layout
@@ -1696,7 +1745,7 @@ fibonacci{$n-2$}
 
 	
 \backslash
-Return{$memo[n]$}
+Return{$memo[N]$}
 \backslash
 ;
 \end_layout
@@ -1745,11 +1794,91 @@ Complexity analysis
 
 \begin_deeper
 \begin_layout Itemize
-Time
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+visible<1->{
+\end_layout
+
+\end_inset
+
+What is the run time complexity in both cases?
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+} 
+\backslash
+visible<2->{
+\end_layout
+
+\end_inset
+
+
+\begin_inset Formula $O(\max(Q,N))$
+\end_inset
+
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Itemize
-Memory
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+visible<3->{
+\end_layout
+
+\end_inset
+
+And the memory complexity?
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+} 
+\backslash
+visible<4->{
+\end_layout
+
+\end_inset
+
+
+\begin_inset Formula $O(N)$
+\end_inset
+
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_deeper
@@ -1912,7 +2041,16 @@ Given the respective heights for each of the
  on a new line.
 \end_layout
 
-\begin_layout Block
+\begin_layout ExampleBlock
+\begin_inset Argument 2
+status open
+
+\begin_layout Plain Layout
+Example
+\end_layout
+
+\end_inset
+
 For example, there is 
 \begin_inset Formula $s=1$
 \end_inset
@@ -1922,7 +2060,64 @@ For example, there is
 \end_inset
 
  steps high.
- Davis can step on the following sequences of steps:
+ David can step on up to 
+\begin_inset Formula $13$
+\end_inset
+
+ sequences of steps.
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+David's staircase (brainstorming)
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout ExampleBlock
+\begin_inset Argument 2
+status open
+
+\begin_layout Plain Layout
+David's staircase (
+\begin_inset CommandInset href
+LatexCommand href
+name "source: HackerRank"
+target "https://www.hackerrank.com/challenges/ctci-recursive-staircase/problem"
+literal "false"
+
+\end_inset
+
+)
+\end_layout
+
+\end_inset
+
+For example, there is 
+\begin_inset Formula $s=1$
+\end_inset
+
+ staircase in the house that is 
+\begin_inset Formula $n=5$
+\end_inset
+
+ steps high.
+ David can step on the following sequences of steps:
 \end_layout
 
 \end_deeper
